# vscode-cpp-centos-template

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
.devcontainer/: devcontainer.json
